@@ -26,7 +26,7 @@ main (int argc, char **argv)
   if (file1Buffer == 0)
     {
       fprintf (stderr, "Error loading .wav file: '%s'\n",
-	       alutGetErrorString (alutGetError ()));
+               alutGetErrorString (alutGetError ()));
       exit (EXIT_FAILURE);
     }
 
@@ -37,7 +37,7 @@ main (int argc, char **argv)
   if (file2Buffer == 0)
     {
       fprintf (stderr, "Error loading .au file: '%s'\n",
-	       alutGetErrorString (alutGetError ()));
+               alutGetErrorString (alutGetError ()));
       exit (EXIT_FAILURE);
     }
 
@@ -48,7 +48,7 @@ main (int argc, char **argv)
   if (file3Buffer == 0)
     {
       fprintf (stderr, "Error loading .raw file: '%s'\n",
-	       alutGetErrorString (alutGetError ()));
+               alutGetErrorString (alutGetError ()));
       exit (EXIT_FAILURE);
     }
 
